fixed missing margin for footer

--- a/source/_patterns/04-templates/list-page/_list-page.scss
+++ b/source/_patterns/04-templates/list-page/_list-page.scss
@@ -3,6 +3,7 @@
 }
 .resultpage__list {
 	margin-top: 2rem;
+	margin-bottom: 2rem;
 }
 @media all and (min-width: $bp-l) {
 	.resultpage__list {
